# Bcs

./: .gitignore  Book1.xlsx  CMakeLists.txt  README.md  etrap_structures.tar  main.py  pdf_xyz.py  ringchange.txt  stats_Siatoms.xlsx  test
A0/: CMakeLists.txt  RandomWalk.py
A0/cpp_src/main/: CMakeLists.txt  main.cpp
A0/cpp_src/solver/: CMakeLists.txt  RandomWalk.cpp  RandomWalk.h
cpp_src/main/: CMakeLists.txt
cpp_src/solver/: CMakeLists.txt  solver.h
datasets/: dihed.xlsx  no_post.xlsx  no_post_rings.xlsx  post.xlsx  post_dihed.xlsx  post_rings.xlsx
f_code/: a_sio2-pos-Replica_nr_10-1.xyz  etrap_structures.tar  gofr  gofr.f
original_code/: a_sio2-pos-Replica_nr_01-1.xyz
python code/: AmorphousOxide.py  AmorphousOxide_.py  Analyze.py  PDF.py  analyze_newdata.py  defecter-detector-v1.json  double_bond.csv  machine_learning.py  main.py  neural_network.py  new_ml.py  structure_factor.py
python code/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
python code/data/: angle_bonds.csv  angles.csv  (+10 more)
xyz_files/: asio2_001_pre.xyz  asio2_002_pre.xyz  asio2_004_post.xyz  asio2_005_pre.xyz  asio2_007_pre.xyz  asio2_008_pre.xyz  asio2_009_pre.xyz  asio2_013_pre.xyz  asio2_014_pre.xyz  asio2_015_post.xyz  asio2_016_pre.xyz  asio2_018_pre.xyz  asio2_020_pre.xyz  asio2_029_pre.xyz  asio2_030_pre.xyz  asio2_031_pre.xyz  asio2_033_pre.xyz  asio2_035_pre.xyz  asio2_037_post.xyz  asio2_037_pre.xyz  asio2_038_pre.xyz  asio2_040_pre.xyz  asio2_042_pre.xyz  asio2_043_pre.xyz  asio2_045_pre.xyz  asio2_049_pre.xyz  asio2_050_pre.xyz  asio2_053_pre.xyz  asio2_056_post.xyz  asio2_058_pre.xyz  asio2_059_pre.xyz  asio2_060_pre.xyz  asio2_061_pre.xyz  asio2_062_pre.xyz  asio2_071_pre.xyz  asio2_072_pre.xyz  asio2_080_pre.xyz  asio2_088_pre.xyz  asio2_089_post.xyz  asio2_090_pre.xyz  (+316 more)
(+91 files in other folders)
